# c--EspansoHelper

./: .gitignore  CMakeLists.txt  README.md  app.rc  copy_qt_dlls.bat  copy_qt_dlls_71.bat  resources.qrc  setup.iss
src/: main.cpp  mainwindow.cpp  mainwindow.h
